--- a/code/style.css
+++ b/code/style.css
@@ -247,6 +247,9 @@ html, body {
         padding: 10px;
         font-size: 16px;
     }
+    .trycontainer{
+        width: 100%;
+    }
     /* item Container Ending */
     /* Meals Of Searech Items Container Starting */
     #melasSection{
@@ -316,6 +319,11 @@ html, body {
         position: absolute;
         top:50px;
         left: 0%;
+    }
+    .nofoodfoundtext{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        padding-left: 40%;
     }
     /* Meals Of Searech Items Container Ending */
     /* Recipes Container Starting */
@@ -457,10 +465,25 @@ html, body {
         font-weight: 500;
     }
     /* Recipes Container Ending */
-    .trycontainer{
+    /* All Hover Effects */
+    .main_heading_searchbar_content_container button:hover{
+        background-color: white;
+        color: orangered;
+    }
+    header{
+        position: fixed;
         width: 100%;
+        z-index: 998;
     }
-    .nofoodfoundtext{
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 50px;
+    .categoriesCards img:hover{
+        transform: scale(1.2);
+        transition: 2s;
+        transition-timing-function: ease-in-out;
     }
+    #sliderlinks li:hover{
+        color: orangered;
+    }
+    /* All Hover Effect Completed */
+
+   
+    
